--- a/MX-Arg/src/components/Hero/hero.css
+++ b/MX-Arg/src/components/Hero/hero.css
@@ -1,14 +1,53 @@
 .header__hero {
-  min-height: 70vh;
+  min-height: 100vh;
   position: relative;
   background: linear-gradient(rgba(0, 6, 87, 0.5), rgba(0, 6, 87, 0.5)),
     url(../../img/hero-img.webp) no-repeat top fixed;
   background-size: cover;
 }
 
-.header__hero-text {
+.header__hero-content {
   position: absolute;
+  width: 100%;
   color: var(--white);
-  right: 0;
-  bottom: 45%;
+  top: 35%;
+}
+
+.header__hero-content h1 {
+  font-size: 3rem;
+}
+
+.header__hero-content p {
+  max-width: 600px;
+  margin: 1rem 0;
+  font-size: 1.1rem;
+}
+
+.header__hero-content button {
+  border: 1px solid var(--orange);
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  padding: 0.5rem 3rem;
+  background-color: var(--orange);
+  transition: all 0.2s;
+}
+.header__hero-content button:hover {
+  background-color: transparent;
+  color: var(--white);
+}
+
+@media (max-width: 600px) {
+  .header__hero-content {
+    text-align: center;
+  }
+
+  .header__hero-content p {
+    font-size: 1rem;
+  }
+
+  .header__hero-content button {
+    font-size: 1rem;
+    width: 100%;
+  }
 }
