--- a/MX-Arg/src/components/Navbar/navbar.css
+++ b/MX-Arg/src/components/Navbar/navbar.css
@@ -2,8 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 3rem;
+  min-height: 11vh;
   padding: 0 2rem;
+  width: 100%;
+  z-index: 10;
+  position: fixed;
+  transition: all 0.2s;
+}
+
+.header__navbar-bg {
   background-color: var(--blue);
 }
 
@@ -13,11 +20,11 @@
   color: var(--white);
   transition: all 0.2s;
   text-decoration: none;
-  font-family: var(--font-title);
 }
 .header__navbar-logo h2 {
   font-size: 2rem;
   letter-spacing: 3px;
+  font-family: var(--font-title);
 }
 
 .header__navbar-logo img {
@@ -40,10 +47,83 @@
   text-decoration: none;
   transition: all 0.2s;
   font-size: 1.1rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .header__navbar-logo:hover,
 .header__navbar-links li a:hover {
   color: var(--orange);
+}
+
+.header__navbar-rmenu {
+  display: none;
+  position: absolute;
+  top: 2px;
+  right: 10px;
+}
+.rmenu-btn {
+  cursor: pointer;
+}
+
+@media (max-width: 800px) {
+  .header__navbar {
+    min-height: 9vh;
+  }
+
+  .header__navbar-logo img {
+    height: 4.5rem;
+  }
+  .header__navbar-logo h2 {
+    font-size: 1.8rem;
+  }
+
+  .header__navbar-links li {
+    padding: 0 0.5rem;
+  }
+  .header__navbar-links li a {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .header__navbar-rmenu {
+    display: block;
+    position: relative;
+  }
+
+  .header__navbar-links {
+    background-color: var(--transparent);
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 40%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    transform: translateX(100%);
+    transition: all 0.5s;
+  }
+}
+.rmenu__active {
+  transform: translateX(0);
+}
+
+@media (max-width: 400px) {
+  .header__navbar {
+    padding: 0 0.5rem;
+  }
+
+  .header__navbar-logo h2 {
+    font-size: 1.4rem;
+  }
+  .header__navbar-logo img {
+    height: 4rem;
+  }
+
+  .header__navbar-links {
+    width: 65%;
+  }
 }
