--- a/MX-Arg/src/index.css
+++ b/MX-Arg/src/index.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Belanosima:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;700&family=Oswald:wght@400;500;700&display=swap');
 
 :root {
-  --font-text: 'Belanosima', sans-serif;
-  --font-title: 'Bebas Neue', sans-serif;
+  --font-title: 'Belanosima', sans-serif;
+  --font-text: 'Oswald', sans-serif;
 
   --orange: #eb8340;
   --green: #3feb43;
-  --blue: #3d10eb;
+  --blue: #160169ca;
+  --transparent: #0e0140c5;
   --white: #e8e1dd;
   --dark: #403d3c;
 }
