adding the bikes to the bike part

--- a/MX-Arg/src/index.css
+++ b/MX-Arg/src/index.css
@@ -8,6 +8,6 @@
   --green: #3feb43;
   --blue: #160169ca;
   --transparent: #0e0140c5;
-  --white: #e8e1dd;
+  --white: #f9ede6;
   --dark: #403d3c;
 }
