--- a/MX-Arg/src/App.css
+++ b/MX-Arg/src/App.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   font-family: var(--font-text);
 }
-
+html {
+  scroll-behavior: smooth;
+}
 .section__padding {
   padding: 2rem 10rem;
 }
