--- a/Variety-Haven/src/index.css
+++ b/Variety-Haven/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Quicksand:wght@400;500;700&display=swap');
+
 :root {
   /* Resaltar */
   --blue: #3498db;
@@ -25,10 +27,15 @@
   --btn-blue: #42a5f5;
   --btn-green: #66bb6a;
   --btn-orange: #ffa726;
+
+  /* Font family */
+  --primary-font: 'Quicksand', sans-serif;
+  --title-font: 'Playfair Display', serif;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: var(--primary-font);
 }
