--- a/Variety-Haven/src/index.css
+++ b/Variety-Haven/src/index.css
@@ -1,41 +1,69 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Quicksand:wght@400;500;700&display=swap');
-
 :root {
-  /* Resaltar */
-  --blue: #3498db;
-  --red: #e74c3c;
-  --green: #2ecc71;
-  --yellow: #f1c40f;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-  /* Neutral back color */
-  --light-gray: #f5f5f5;
-  --gray: #dcdcdc;
-  --dark-gray: #333333;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
-  /* Accent colors */
-  --orange: #e67e22;
-  --pink: #e91e63;
-  --purple: #9b59b6;
-  --lime-green: #00bc8c;
-
-  /* Text colors */
-  --font-white: #ffffff;
-  --font-gray: #333333;
-  --font-black: #000000;
-
-  /* Buttons */
-  --btn-blue: #42a5f5;
-  --btn-green: #66bb6a;
-  --btn-orange: #ffa726;
-
-  /* Font family */
-  --primary-font: 'Quicksand', sans-serif;
-  --title-font: 'Playfair Display', serif;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
-* {
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: var(--primary-font);
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
